[package]

name = "NTA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version="4.0.8", features=["derive"]}
eframe = "0.19.0"
egui = "0.19.0"
tracing = "0.1.36"
#tracing-subscriber = "0.3.15"
rand = "0.8.4"

#chrono = "0.4.37"


#dns-lookup = "2.0.4"


#eframe = "0.19.0"

#egui = "0.19.0"
#clap = { version="4.0.8", features=["derive"]}
etherparse = "0.14.3"
#tracing = "0.1.36"
#tracing-subscriber = "0.3.15"
#net = "0.0.0"
networking = "0.1.9"
pcap = "1.3.0"
pnet = "0.34.0"
#rand = "0.8.5"
str = "0.1.4"
procfs = "0.16.0"
nix = "0.28.0"
#systemstat = "0.2.3"
tokio = "1.37.0"
notify-rust = "4.11.0"
hex = "0.4.3"

